# Construct-RLBot

./: .gitignore  Cargo.toml  pyproject.toml
configs/: bc_v1.toml  champion.toml  curriculum_v1.toml  curriculum_v2.toml  curriculum_v3_match.toml  h2h_references.toml  reward_probe_veltoball.toml  reward_v0.toml  reward_v1.toml  reward_v2.toml  reward_v3.toml  reward_v3_1.toml  reward_v4.toml  reward_v4_1.toml  reward_v5_1_antidraw.toml  reward_v5_2_goalterm.toml  reward_v5_winprob.toml  train_v0.toml  train_v1.toml  train_v1_fine.toml  train_v2_replayreset.toml  train_v3_matchwin.toml
deploy/: README.md  actions.py  bot.py  bot.toml  loadout.toml  match.toml  model.py  obs.py  requirements.txt  windows_stream_overlay.ps1  windows_viser_relay.ps1
docs/: external-bench.md  levers-roadmap-2026-07-19.md  training-journal.md
engine/: Cargo.toml
engine/examples/: bench_transformer.rs  decode_probe.rs  reply_probe.rs
engine/src/: actions.rs  ballpred.rs  curriculum.rs  engine.rs  episode.rs  lib.rs  obs.rs  obs_v1.rs  policy.rs  policy_v1.rs  reset_pool.rs  reward.rs  sampler.rs  schema.rs  sim_init.rs  viser.rs
engine/tests/: arena_basics.rs  curriculum_test.rs  engine_v1_test.rs  episode_test.rs  obs_integration.rs  obs_v1_test.rs  policy_parity.rs  policy_v1_test.rs  reset_pool_test.rs  viser_test.rs
engine/tests/fixtures/: policy_fixture.json  policy_v1_golden.npz  reset_pool_mini.jsonl
replay/: Cargo.toml
replay/src/: bc_obs.rs  frames.rs  lib.rs  meta.rs  project.rs  pyr.rs  reconstruct.rs  reset_pool.rs  shard.rs  sim_init.rs
replay/tests/: bc_export_test.rs  frames_test.rs  meta_test.rs  project_test.rs  pyr_test.rs  reconstruct_test.rs  reset_pool_test.rs  shard_test.rs
replay/tests/fixtures/: sample.replay
schema/: v0.toml  v1.toml
scripts/: bc_train.py  behavior_distance.py  bench_collect.py  bench_engine.py  (+29 more)
(+71 files in other folders)
