[package]
name = "construct-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "construct_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py311"] }
numpy = "0.29"
rocketsim_rs = "=0.37.0"
cxx = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
candle-core = "0.11.0"
candle-nn = "0.11.0"

[dev-dependencies]
ndarray = "0.16"
ndarray-npy = "0.9"
