[package]
name = "construct-replay"
version = "0.1.0"
edition = "2021"

[lib]
name = "construct_replay"

[[bin]]
name = "replay-parse"
path = "src/bin/replay_parse.rs"

[dependencies]
boxcars = "0.11.5"
subtr-actor = "1.2.0"
rocketsim_rs = "=0.37.0"
ndarray = "0.16"
ndarray-npy = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
